# ROS2_Practice

cpp_custom_srv_interface/src/: .gitignore
cpp_custom_srv_interface/src/robot_interface_controller/: CMakeLists.txt  package.xml
cpp_custom_srv_interface/src/robot_interface_controller/include/: custom_common.hpp
cpp_custom_srv_interface/src/robot_interface_controller/src/: custom_publisher.cpp  custom_simulate_system.cpp  custom_subscriber.cpp
cpp_custom_srv_interface/src/robot_interfaces/: CMakeLists.txt  package.xml
cpp_custom_srv_interface/src/robot_interfaces/msg/: RobotInterfaceRaport.msg
cpp_custom_srv_interface/src/robot_interfaces/srv/: SetSystemPeriph.srv  SetTargetSpeed.srv
cpp_node/src/simple_node/: .gitignore  CMakeCache.txt  CMakeLists.txt  package.xml
cpp_node/src/simple_node/src/: simple_node.cpp  simple_pub_sub.cpp  simple_publisher.cpp  simple_subscriber.cpp
cpp_node_services/src/server_client_pkg/: CMakeLists.txt  package.xml
cpp_node_services/src/server_client_pkg/src/: client.cpp  server.cpp
cpp_service_node/src/: .gitignore
cpp_service_node/src/cpp_service_node/: CMakeLists.txt  package.xml
cpp_service_node/src/cpp_service_node/src/: client.cpp  server.cpp
node_practice/src/server_client_publisher/: CMakeCache.txt  CMakeLists.txt  package.xml
node_practice/src/server_client_publisher/src/: client.cpp  server.cpp
node_practice/src/server_client_publisher/srv/: set_int64.srv
